--- a/site/index.html
+++ b/site/index.html
@@ -16,25 +16,36 @@
 </head>
 
 <body>
-    <div id="col">
-        <div id="inputs">
-            <h3>Origin</h3>
-            <input id="from">
-            <h3>Destination</h3>
-            <input id="to">
-            <h3>Date</h3>
-            <input id="when" type="datetime-local">
+    <div class="row">
+        <div class="col-sm-4">
+            <div id="inputs">
+                <h3>Origin</h3>
+                <input id="from">
+                <h3>Destination</h3>
+                <input id="to">
+                <h3>Date</h3>
+                <input id="when" type="datetime-local">
 
-            <button id="submit">Predict!</button>
+                <button id="submit">Predict!</button>
+            </div>
         </div>
-        <div id="map"></div>
+        <div class="col-sm-4">
 
+        </div>
+        <div class="col-sm-4">
+
+        </div>
+    </div>
+    <div class="row">
+        <div id="map"></div>
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/core.js" integrity="sha256-YCbKJH6u4siPpUlk130udu/JepdKVpXjdEyzje+z1pE="
     crossorigin="anonymous"></script>
 <script src="https://unpkg.com/airportsjs@0.2.2/index.js" integrity="sha384-EbZKpeT8Hc4sUMkCG2sccMykKgRQtwsIDnd05MKsEjBY03z5U6WFOV1ARUA2jXM/"
     crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
 <script src="map.js"></script>
 
 </html>
