--- a/site/index.html
+++ b/site/index.html
@@ -46,6 +46,7 @@
     crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
-<script src="map.js"></script>
+    <script src="main.js"></script>
+    <script src="map.js"></script>
 
 </html>
