added stuff that doesn't quite work yet

--- a/site/index.html
+++ b/site/index.html
@@ -36,6 +36,7 @@
 
         </div>
     </div>
+    <div id = "amadeus"></div>
     <div class="row">
         <div id="map"></div>
     </div>
@@ -48,5 +49,6 @@
     crossorigin="anonymous">
     <script src="main.js"></script>
     <script src="map.js"></script>
+    <script srv="price.js"></script>
 
 </html>
