fixed the flight info display

--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,7 @@
 <body>
     <div class="row">
         <div class="col-sm-4">
+            <div id="flex">
             <div id="inputs">
                 <h3>Origin</h3>
                 <input id="from">
@@ -28,15 +29,13 @@
 
                 <button id="submit">Predict!</button>
             </div>
+            <div id = "amadeus"><h3>My Flights</h3></h3>
+                <h4 id = "carrier">Carrier: </h4>
+                <h4 id = "time">Time: </h4>
+                <h4 id = "price">Price: </h4>
+            </div>
+            </div>
         </div>
-        <div class="col-sm-4">
-
-        </div>
-        <div class="col-sm-4">
-
-        </div>
-    </div>
-    <div id = "amadeus"></div>
     <div class="row">
         <div id="map"></div>
     </div>
